--- a/packages/visual-stack/src/layouts/DialogLayout/index.css
+++ b/packages/visual-stack/src/layouts/DialogLayout/index.css
@@ -8,6 +8,7 @@
   padding: 16px 16px 24px;
   background: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,.16);
+  z-index: 2;
 }
 
 .vs-dialog-layout-page-title {
@@ -48,8 +49,10 @@
 
 
 .vs-dialog-layout-content {
+  position: relative;
   padding: 112px 24px;
   margin:0 auto;
+  z-index: 1;
 }
 
 .vs-dialog-layout-content p {
@@ -80,7 +83,7 @@
   text-align:right;
   padding: 8px;
   box-shadow: 0 -2px 3px rgba(0,0,0,.16);
-
+  z-index: 2;
 }
 .vs-dialog-layout-footer .vs-text-btn{
   color: #fff;
